YAML: move from camelCase to hyphen-separated, consistent with rest of codebase
per-page Pandoc metadata, which is in YAML, was written using camel-case like  'cssExtension' or 'safeURL', in part because I didn't know if YAML allowed hyphens in keys and didn't think to check. as more page variables accumulated, this makes them ever harder to remember in the context of all of our classes and templates, so I checked, and hyphens are safe in YAML keys, so mass rename: cssExtension->css-extension, safeURL->safe-url etc.

--- a/404.md
+++ b/404.md
@@ -2,13 +2,13 @@
 title: 404 Not Found
 description: "404 Not Found Error: no page by this name!"
 thumbnail: /static/img/logo/logo-unifrakturmaguntia-lowercase-h.png
-thumbnailText: "'I think you went too far.' [Image of Fraktur/blackletter lowercase letter 'H', alluding to the 'G' Fraktur logo of Gwern.net, humorously implying that the reader who has triggered the 404-Not-Found error did so by going too far alphabetically past the 'G'.]"
+thumbnail-text: "'I think you went too far.' [Image of Fraktur/blackletter lowercase letter 'H', alluding to the 'G' Fraktur logo of Gwern.net, humorously implying that the reader who has triggered the 404-Not-Found error did so by going too far alphabetically past the 'G'.]"
 created: 2009-01-27
 modified: 2022-04-19
 status: finished
 confidence: log
 importance: 0
-cssExtension: dropcaps-de-zs
+css-extension: dropcaps-de-zs
 index: true
 error404: true
 backlink: False
