--- a/404.md
+++ b/404.md
@@ -47,7 +47,7 @@ Or look at a list of **pages by traffic**:
 - [Internet Search Tips](/search "Branwen 2018"){.backlink-not .icon-not}
 - [Dual _n_-Back FAQ](/dnb-faq "Branwen 2009"){.backlink-not .icon-not}
 - [_Death Note_: L, Anonymity & Eluding Entropy](/death-note-anonymity "Branwen 2011"){.backlink-not .icon-not}
-- [Danbooru2021: A Large-Scale Crowdsourced and Tagged Anime Illustration Dataset](/danbooru2021){.backlink-not .icon-not}
+- [Danbooru2021: A Large-Scale Crowdsourced & Tagged Anime Illustration Dataset](/danbooru2021){.backlink-not .icon-not}
 - [It Looks Like You’re Trying To Take Over The World](/fiction/clippy "Branwen 2022"){.backlink-not .icon-not}
 - [Design Of This Website](/design "Branwen 2010"){.backlink-not .icon-not}
 - [The Melancholy of Subculture Society](/subculture){.backlink-not .icon-not}
